Refactor vehicle retrieval in ClientController and update ongoing appointment handling in OngoingAppointmentController; modify Vehicle-X.html to replace schedule service card with new appointment card